<resources>
    <string name="app_name">DistilBert</string>
    <string name="banner_description" translatable="false">Banner</string>
    <string name="title_dataset_hint_text" translatable="false">Please select an article below.</string>
    <string name="title_dataset_list" translatable="false">Datasets</string>
    <string name="title_dataset_detail" translatable="false">Dataset Detail</string>
    <string name="you_might_want_to_ask" translatable="false">You might want to ask?</string>
    <string name="text_query" translatable="false">Text query</string>
    <string name="ask_question" translatable="false">Ask question</string>
    <string name="title_activity_gpt2">GPT2Activity</string>
    <string name="offline_bert">Offline Bert</string>
    <string name="offline_gemma">Offline Gemma</string>
    <string name="online_gemini">Online Gemini</string>
    <string name="loading_model">Loading model</string>
    <string name="chat_label">Message</string>
    <string name="action_send">Send</string>
    <string name="user_label">User</string>
    <string name="model_label">Model</string>
    <string name="disclaimer">Responses generated by user-provided model</string>
</resources>