<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QaActivity">

    <TextView
        android:id="@+id/title_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/standard_margin"
        android:text="Here is the title of article"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/footer_view"
        app:layout_constraintTop_toBottomOf="@id/title_text">

        <TextView
            android:id="@+id/content_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/standard_margin"
            android:scrollbars="vertical"
            android:text="This is the content of the article." />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/footer_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:elevation="@dimen/bottom_sheet_elevation"
        android:padding="32dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/suggestion_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/you_might_want_to_ask"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/suggestion_list"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            app:layout_constraintTop_toBottomOf="@id/suggestion_text" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:hint="@string/text_query"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/ask_button_gemini"
            app:layout_constraintTop_toBottomOf="@id/suggestion_list">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/question_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="3" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/ask_button_bert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/black"
            android:contentDescription="@string/ask_question"
            android:padding="8dp"
            android:text="@string/offline_bert"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_input_layout" />

        <TextView
            android:id="@+id/ask_button_gemma"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="#1565C0"
            android:contentDescription="@string/ask_question"
            android:padding="8dp"
            android:text="@string/offline_gemma"
            android:textColor="@color/white"
            android:visibility="invisible"
            app:layout_constraintEnd_toStartOf="@id/ask_button_gemini"
            app:layout_constraintStart_toEndOf="@id/ask_button_bert"
            app:layout_constraintTop_toBottomOf="@id/text_input_layout" />

        <TextView
            android:id="@+id/ask_button_gemini"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="#0000FF"
            android:contentDescription="@string/ask_question"
            android:padding="8dp"
            android:text="@string/online_gemini"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_input_layout" />

        <TextView
            android:id="@+id/gemini_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="#DCDBDB"
            android:gravity="center_vertical"
            android:minHeight="56sp"
            android:padding="8dp"
            android:textAlignment="gravity"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ask_button_gemini"
            tools:text="1856" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
